@startuml

skinparam ClassAttributeIconSize 0
skinparam BackgroundColor #FFFFFF
skinparam PackageBackgroundColor #FAFAFA
skinparam PackageBorderColor #CCCCCC
skinparam PackageFontName "Segoe UI"
skinparam ClassFontName "Segoe UI"
skinparam ClassHeaderBackgroundColor #EBF3FC
skinparam ClassBorderColor #1F60B4
skinparam ArrowColor #555555

package gui{

    package components {
            note as N_comp
              <b>Black Box: components</b>
              Contains reusable graphical components:
              * InvisiblePanel, CardPanel, ScrollablePanel
              * PrimaryButton, MenuTabButton, FullScreenFrame
              * UnderlinedComboBox, UnderlinedTextField, UnderlinedDateTimePicker
              * StyledChart, StyledLineChart, StyledBarChart, StyledChartPanel
              * DynamicChartContainer, FloatingMessage, TitleLabel, BoldLabel
              * LabeledComponent
            end note
    }

    package style {
        note as N_style
          <b>Black Box: style</b>
          Contains global graphical configurations:
          * AppColors (Consistent color palette for components/charts)
          * PaddingConstants (Standard padding and Insets)
        end note
    }

    package views {
        class ResultsChartsPanel {
        + <<Create>> ResultsChartsPanel()
        + void createCharts()
        - JFreeChart createOpensClosuresChart()
        - JFreeChart createHighsLowsChart()
        - JFreeChart createVolumesChart()
        }

        abstract class AbstractChartsPanel {
        # DynamicChartContainer chartContainer
        + <<Create>> AbstractChartsPanel()
        # void setCharts(List<JFreeChart>)
        }

        class FinancialIndicatorsAnomalyDetectionPanel {
        # void performSearch(String,LocalDateTime,String,String)
        # List<AnomalyResult<FinancialIndicators>> getAnomalyResults()
        # String[] getFeatureNames()
        }

        class MainPage {
        - JFrame mainFrame
        - JPanel mainPanel
        - MenuPanel menuPanel
        + <<Create>> MainPage()
        - void setFlatLaf()
        - void createMainFrame()
        - void createScrollPane()
        - void addSearchPanel()
        - void addResultsCharts()
        + void createCharts()
        }

        class SearchPanel {
        - MainPage mainPage
        - JComboBox<String> assetComboBox
        - {static} String[] ASSETS
        - JComboBox<String> granularityComboBox
        - {static} String[] GRANULARITIES
        - DateTimePicker startDatePicker
        - DateTimePicker endDatePicker
        - JButton searchButton
        + <<Create>> SearchPanel(MainPage)
        - void addAssetComboBox()
        - void addGranularityComboBox()
        - void addStartDatePicker()
        - void addEndDatePicker()
        - void addSearchButton()
        - void search()
        }


        class DataRecordAnomalyDetectionPanel {
        # void performSearch(String,LocalDateTime,String,String)
        # List<AnomalyResult<DataRecord>> getAnomalyResults()
        # String[] getFeatureNames()
        }

        class MenuPanel {
        - ButtonPanelPair[] components
        + <<Create>> MenuPanel()
        - void addComponents()
        + void createCharts()
        - void showPair(int)
        }


        class MenuPanel$ButtonPanelPair {
        ~ MenuTabButton button
        ~ JPanel panel
        + <<Create>> ButtonPanelPair(MenuTabButton,JPanel)
        }

        abstract class BaseAnomalyDetectionPanel {
        - DynamicChartContainer chartContainer
        - JTextField thresholdTextField
        - JTextField treesNumberTextField
        - DateTimePicker startDatePicker
        - JComboBox<String> implementationComboBox
        - {static} String[] implementations
        - JButton searchButton
        + <<Create>> BaseAnomalyDetectionPanel()
        - void addComponents()
        - void addControlPanel()
        - void executeSearch()
        - void updateChartsView()
        - JFreeChart createScoreChart(List<AnomalyResult<T>>,double)
        - JFreeChart createContributionChart(List<AnomalyResult<T>>,String)
        # {abstract}void performSearch(String,LocalDateTime,String,String)
        # {abstract}List<AnomalyResult<T>> getAnomalyResults()
        # {abstract}String[] getFeatureNames()
        }

        class FinancialValuesPanel {
        - JTextField RSIPeriodTextField
        - JTextField fastEMAPeriodTextField
        - JTextField slowEMAPeriodTextField
        - JTextField signalLinePeriodTextField
        - JTextField ATRPeriodTextField
        - JTextField CMFPeriodTextField
        - JButton calculateButton
        + <<Create>> FinancialValuesPanel()
        - void addRSIComponents(JPanel)
        - void addMACDComponents(JPanel)
        - void addATRComponents(JPanel)
        - void addCMFComponents(JPanel)
        - void addCalculateButton(JPanel)
        - void calculate()
        - void createCharts()
        - JFreeChart createRSIChart()
        - JFreeChart createMACDChart()
        - JFreeChart createATRChart()
        - JFreeChart createCMFChart()
        }

        AbstractChartsPanel <|-- ResultsChartsPanel
        BaseAnomalyDetectionPanel <|-- FinancialIndicatorsAnomalyDetectionPanel
        BaseAnomalyDetectionPanel <|-- DataRecordAnomalyDetectionPanel
        MenuPanel +.. MenuPanel$ButtonPanelPair
        AbstractChartsPanel <|-- FinancialValuesPanel
        MenuPanel ..> DataRecordAnomalyDetectionPanel : <<create>>
        MenuPanel ..> FinancialIndicatorsAnomalyDetectionPanel : <<create>>
        MenuPanel ..> FinancialValuesPanel : <<create>>
        MenuPanel ..> ResultsChartsPanel : <<create>>
        SearchPanel ..> MainPage : <<use>>
        MainPage ..> SearchPanel : <<create>>
        MainPage ..> MenuPanel : <<create>>
    }

    views ..> components : <<use>>
    views ..> style : <<use>>
}
@enduml